--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
@@ -96,14 +96,14 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">CN amount</span>
-                            <input type="text" class="form-control input-sm" name="Payable.Credit_Note_Amount" id="txtCN_amount" value="@Model.Payable.Credit_Note_Amount" placeholder="Credit Note Amount" readonly />
+                            <input type="text" class="form-control input-sm" name="Payable.Credit_Note_Amount" id="txtCN_amount" value="@Model.Payable.Credit_Note_Amount" onfocusout="javascript: Calculate_Fianl_Amount_Using_Credit_Note_Amount();" placeholder="Credit Note Amount" readonly />
                         </div>
                     </div>
                  
                     <div class="col-md-4">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Discount%</span>
-                            <input type="text" class="form-control input-sm" name="Payable.Discount_Percentage" id="txtDiscount" onblur="javascript: CalculateDiscount();" value="@Model.Payable.Discount_Percentage" placeholder="Discount" />
+                            <input type="text" class="form-control input-sm" name="Payable.Discount_Percentage" id="txtDiscount" onfocusout="javascript: Calculate_Fianl_Amount_Using_Discount();" value="@Model.Payable.Discount_Percentage" placeholder="Discount" />
                         </div>
                     </div>
 
@@ -193,7 +193,7 @@
                     <div id="divPaidAmount" style="display:none" class="col-md-4">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Paid Amount</span>
-                            <input type="text" class="form-control input-sm" name="Payable.Paid_Amount" id="txtPaid_Amount" value="@Model.Payable.Paid_Amount" onchange="javascript: FinalAmount();" placeholder=" Enter Paid amount" />
+                            <input type="text" class="form-control input-sm" name="Payable.Paid_Amount" id="txtPaid_Amount" value="@Model.Payable.Paid_Amount" onfocusout="javascript: FinalAmount();" placeholder=" Enter Paid amount" />
                         </div>
                     </div>
                 </div>
@@ -347,7 +347,7 @@
                                             <td>
                                                 @*@if (Model.Payable.Status != "Payment Done")
                                         {*@
-                                                <button type="button" id="edit-bank-details" class="btn btn-box-tool btn-tel-edit" onclick="javascript:EditPayableData(@itm.Payable_Item_Id)"><i class='fa fa-pencil'></i></button>
+                                                <button type="button" id="edit-payable-details" class="btn btn-box-tool btn-tel-edit" onclick="javascript:EditPayableData(@itm.Payable_Item_Id)"><i class='fa fa-pencil'></i></button>
                                                 @*<button type="button" id="delete-bank-details" class="btn btn-box-tool btn-tel-delete" onclick="javascript:DeletPayableData(@itm.Payable_Item_Id)"><i class='fa fa-times'></i></button>*@
                                                 @*}*@
 
