--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -313,9 +313,11 @@
                             <td style="width:auto;"></td>
                             <td style="width:180px;"></td>
                         </tr>
+
+
                     </tbody>
                 </table>
-
+                <input type="hidden" id="hdnrecords_Validation" name="records_Validation" />
             </div>
         </div>
 
