--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -102,9 +102,12 @@
                 </div>
             </div>
            
-            <div id="common_Product_MRP" class="col-md-9" style="padding: 10px;overflow:auto;">
+            <div id="common_Product_MRP" class="col-md-9" style="padding: 10px;overflow:auto;height:480px;">
 
             </div>
+            <br />
+            <br />
+            <br />
         </div>
 
         <div class="row">
