purchase_order_Reequest bugs

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -317,7 +317,7 @@
 
                     </tbody>
                 </table>
-                <input type="hidden" id="hdnrecords_Validation" name="records_Validation" />
+                <label id="hdnrecords_Validation" style="display:none"><span style="color:red" id="records_Message"></span></label>
             </div>
         </div>
 
