--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -5,7 +5,7 @@
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Event.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Methods.js"></script>
-<script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>
+@*<script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>*@
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -62,7 +62,7 @@
                                 <div class="col-md-2">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Customer name</span>
-                                        <input type="text" class="form-control input-sm" name="Receivable.Customer_Name" id="txtCustomer_name" value="@Model.Receivable.Customer_Name" placeholder="Enter Customer name " maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="Receivable.Customer_Name" id="txtCustomer_name" value="@Model.Receivable.Customer_Name" placeholder="Enter Customer name " maxlength="20" />
                                     </div>
                                 </div>
 
