Add Validation for Purchase request return.

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -97,7 +97,7 @@
                         </div>
 
                     </div>
-
+                    
                     <div class="row">
                         <div class="table-responsive" style="width:100%; margin: 0px 0;">
                             <input type="hidden" id="hdnRowIdspecific" value="0" />
@@ -171,6 +171,7 @@
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" maxlength="10" />
+                                            <input class="form-control input-sm" type="hidden" name="" id="hdnQuantity_0" value="" maxlength="10" /> 
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].WSR_Price" id="textWSR_Price_0" value="0" readonly />
@@ -220,7 +221,7 @@
                                             <label>Discount</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" id="textDiscountPercentage_0" maxlength="5">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Percentage" value="0" id="textDiscountPercentage_0" maxlength="5">
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.Discount_Amount" value="0" readonly id="textDiscountAmount_0">
