--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -374,13 +374,13 @@
                                             <label>Total Qty</label>
                                         </td>
                                         <td Style="width:60px">
-                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Total_Quantity" readonly id="textTotalQuantity_0">
+                                            <input class="form-control input-sm" type="text" value="1" name="PurchaseInvoice.Total_Quantity" readonly id="textTotalQuantity_0">
                                         </td>
                                         <td Style="width:60px">
                                             <label>WSR Amount</label>
                                         </td>
                                         <td Style="width:60px">
-                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.Total_Amount" readonly id="textTotalAmount_0">
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseInvoice.Total_Amount" readonly id="textTotalAmount_0">
                                         </td>
                                         <td Style="width:150px"></td>
                                         <td Style="width:160px"></td>
@@ -493,6 +493,7 @@
                             </table>
                         </div><!-- /.col -->
                     </div>
+
 
                     <div class="row">
                         <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 120px;">
