--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -199,6 +199,7 @@
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" maxlength="10" />
+                                            <input class="form-control input-sm" type="hidden" name="" id="hdnQuantity_0" value="" /> 
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].WSR_Price" id="textWSR_Price_0" readonly />
