--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -116,22 +116,22 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing address.</span>
-                <textarea class="form-control" rows="5" placeholder="Billing address." name="Customer.Customer_Billing_Address">@Model.Customer.Customer_Billing_Address</textarea>
+                <textarea class="form-control" rows="5" placeholder="Billing address." name="Customer.Customer_Billing_Address" maxlength="250">@Model.Customer.Customer_Billing_Address</textarea>
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing city.</span>
-                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Billing_City" value="@Model.Customer.Customer_Billing_City" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Billing_City" value="@Model.Customer.Customer_Billing_City" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing state.</span>
-                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Billing_State" value="@Model.Customer.Customer_Billing_State" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Billing_State" value="@Model.Customer.Customer_Billing_State" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Billing country.</span>
-                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Billing_Country" value="@Model.Customer.Customer_Billing_Country" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Billing_Country" value="@Model.Customer.Customer_Billing_Country" maxlength="50" />
             </div>
 
             <div class="form-group">
@@ -150,23 +150,23 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping address.</span>
-                <textarea class="form-control" rows="5" placeholder="Shipping address." name="Customer.Customer_Shipping_Address">@Model.Customer.Customer_Shipping_Address</textarea>
+                <textarea class="form-control" rows="5" placeholder="Shipping address." name="Customer.Customer_Shipping_Address" maxlength="250">@Model.Customer.Customer_Shipping_Address</textarea>
 
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping city.</span>
-                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Shipping_City" value="@Model.Customer.Customer_Shipping_City" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter city." name="Customer.Customer_Shipping_City" value="@Model.Customer.Customer_Shipping_City" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping state.</span>
-                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Shipping_State" value="@Model.Customer.Customer_Shipping_State" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Shipping_State" value="@Model.Customer.Customer_Shipping_State" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Shipping country.</span>
-                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Shipping_Country" value="@Model.Customer.Customer_Shipping_Country" maxlength="100" />
+                <input type="text" class="form-control" placeholder="Enter country." name="Customer.Customer_Shipping_Country" value="@Model.Customer.Customer_Shipping_Country" maxlength="50" />
             </div>
 
             <div class="form-group">
@@ -224,7 +224,7 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse name.</span>
-                <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" maxlength="100"/>
+                <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" maxlength="50"/>
 
             </div>
 
@@ -246,7 +246,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" maxlength="100"/>
+                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" maxlength="50"/>
                     </div>
 
                     <div class="form-group">
@@ -259,7 +259,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" maxlength="100" />
+                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" maxlength="50" />
                     </div>
 
                     <div class="form-group">
