--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -277,7 +277,7 @@
 
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnEmployeeSave">Save</button>
-                    <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "Employee")'">Cancel</button>
+                    <button type="button" class="btn btn-danger active" id="btnCancel" onclick="location.href='@Url.Action("Index", "Employee")'">Cancel</button>
                 </div>
 
             </div>
