--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
@@ -164,7 +164,8 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveVendorContact">Save</button>
 
-                    <button type="reset" class="btn btn-danger active">Cancel</button>
+                    <button type="reset" id="btnCancel" class="btn btn-danger active">Cancel</button>
+                    @*<a class="btn btn-danger active" id="btnCancel" role="button" >Cancel </a>*@
                 </div>
 
             </div>
