--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -127,7 +127,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Date</span>
-                                    <div class="input-group date" data-date="" data-date-format="MM-dd-yyyy">
+                                    <div class="input-group date" data-date="" data-date-format="dd-mm-yyyy">
                                         <input type="text" class="form-control datepicker" id="txtCheque_Date" name="Receivable.Cheque_Date" value="@((Model.Receivable.Cheque_Date == DateTime.MinValue ? "" : Model.Receivable.Cheque_Date.ToString("MM-dd-yyyy")))" readonly />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
@@ -199,7 +199,7 @@
                             <div id="divPaidAmount" class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Amount</span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" value="@(Model.Receivable.Credit_Note_Amount == 0 ? "" : Model.Receivable.Credit_Note_Amount.ToString())" placeholder=" Enter Paid amount" maxlength="20" readonly />
+                                    <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" onblur="javascript: Get_Balance_Amount_Using_Credit_Note_Amount();" value="@(Model.Receivable.Credit_Note_Amount == 0 ? "" : Model.Receivable.Credit_Note_Amount.ToString())" placeholder=" Enter Paid amount" maxlength="20"/>
                                 </div>
                             </div>
 
@@ -307,7 +307,7 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnSavePay">Save</button>
 
-                        <button type="reset" class="btn btn-danger active" id="btnResetPay">Reset</button>
+                        <button type="reset" class="btn btn-danger active" onclick="javascript: Cancle();" id="btnResetPay">Reset</button>
                     </div>
 
                 </div>
